--- a/index.html
+++ b/index.html
@@ -251,13 +251,16 @@
         // 1. RENDER BANNER (STYLE 1, 2, 3)
         // --- 1. RENDER BANNER (5 STYLES + LOGO + TAGS MỚI) ---
         // --- RENDER BANNER (5 STYLES ĐÃ TINH CHỈNH) ---
+        // --- RENDER BANNER & LOGO (ĐÃ KHẮC PHỤC MẤT CHỮ) ---
         function renderHero(d) {
-            // 1. Xử lý Logo (Nếu có)
+            // 1. Xử lý Logo: Hiển thị cả Ảnh + Chữ
             if (d.logo) {
                 const logoContainer = document.getElementById('siteLogoContainer');
                 if (logoContainer) {
-                    // Thay thế toàn bộ nội dung logo mặc định bằng ảnh logo mới
-                    logoContainer.innerHTML = `<img src="${d.logo}" alt="Logo" class="h-10 md:h-12 w-auto object-contain">`;
+                    logoContainer.innerHTML = `
+                        <img src="${d.logo}" alt="Logo" class="h-10 w-10 md:h-12 md:w-12 object-contain rounded-lg shadow-sm">
+                        <span class="text-xl md:text-2xl text-brand font-handwriting pt-1 ml-2">Thầy Choang</span>
+                    `;
                 }
             }
 
@@ -266,7 +269,7 @@
             
             const style = d.style || 'style1';
             
-            // Xử lý Tags (Hiển thị đẹp hơn)
+            // Xử lý Tags
             let tagsHtml = '';
             if (d.tags && Array.isArray(d.tags)) {
                 tagsHtml = d.tags.map(tag => 
@@ -278,7 +281,7 @@
 
             let html = '';
 
-            // --- STYLE 1: CỔ ĐIỂN (Đã chỉnh chữ nhỏ, Dòng 2 nhỏ hơn Dòng 1) ---
+            // --- STYLE 1: CỔ ĐIỂN ---
             if (style === 'style1') {
                 container.className = "flex-1 flex items-center relative overflow-hidden bg-gradient-to-br from-teal-50 via-white to-blue-50 py-10 md:py-16";
                 html = `
@@ -288,7 +291,7 @@
                             <span class="text-2xl md:text-4xl block mb-1">${d.title1}</span>
                             <span class="text-xl md:text-3xl text-transparent bg-clip-text bg-gradient-to-r from-teal-600 to-orange-500">${d.title2}</span>
                         </h1>
-                        <div class="flex flex-wrap gap-2 justify-center lg:justify-start">${tagsHtml}</div>
+                        <div class="flex flex-wrap gap-2 justify-center lg:justify-start pt-1">${tagsHtml}</div>
                         <p class="text-sm md:text-base text-gray-600 font-medium max-w-xl mx-auto lg:mx-0 leading-relaxed">${d.desc}</p>
                         <div class="pt-2">
                             <a href="${d.btnLink}" class="inline-block px-6 py-3 bg-accent text-white font-bold rounded-xl shadow-lg hover:shadow-orange-300 transition-transform hover:scale-105 uppercase tracking-wide text-xs md:text-sm">${d.btnText}</a>
@@ -299,7 +302,7 @@
                     </div>
                 </div>`;
             } 
-            // --- STYLE 2: HIỆN ĐẠI (Căn giữa - Chữ vừa phải) ---
+            // --- STYLE 2: HIỆN ĐẠI ---
             else if (style === 'style2') {
                 container.className = "flex-1 pt-12 bg-white relative overflow-hidden flex flex-col items-center";
                 html = `
@@ -316,7 +319,7 @@
                     <img src="${d.image}" class="w-full h-auto rounded-t-2xl shadow-2xl border-t border-x border-gray-100">
                 </div>`;
             }
-            // --- STYLE 3: DARK MODE (Chữ nhỏ, cân đối) ---
+            // --- STYLE 3: DARK MODE ---
             else if (style === 'style3') {
                 container.className = "flex-1 bg-gray-900 text-white py-16 relative overflow-hidden flex items-center";
                 html = `
@@ -339,13 +342,14 @@
                     </div>
                 </div>`;
             }
-            // --- STYLE 4: POSTER (Đã thêm khung nền mờ cho chữ dễ đọc) ---
+            // --- STYLE 4: POSTER ---
             else if (style === 'style4') {
                 container.className = "flex-1 relative min-h-[500px] flex items-center";
                 html = `
                 <div class="absolute inset-0 z-0">
                     <img src="${d.image}" class="w-full h-full object-cover">
-                    <div class="absolute inset-0 bg-black/40"></div> </div>
+                    <div class="absolute inset-0 bg-black/40"></div> 
+                </div>
                 <div class="max-w-7xl mx-auto px-4 relative z-10 w-full text-white">
                     <div class="max-w-xl bg-black/40 backdrop-blur-md p-6 md:p-10 rounded-2xl border border-white/10 shadow-2xl">
                         <div class="flex flex-wrap gap-2 mb-3">${tagsHtml}</div>
@@ -358,7 +362,7 @@
                     </div>
                 </div>`;
             }
-            // --- STYLE 5: PHÁ CÁCH (Đã bỏ lớp phủ màu, ảnh rõ nét) ---
+            // --- STYLE 5: PHÁ CÁCH ---
             else if (style === 'style5') {
                 container.className = "flex-1 bg-white relative overflow-hidden flex flex-col md:flex-row";
                 html = `
