--- a/index.html
+++ b/index.html
@@ -278,11 +278,61 @@
         function switchModal() { toggleRegisterModal(false); toggleLoginModal(true); }
         function toggleMobileMenu() { document.getElementById('mobile-menu').classList.toggle('open'); }
     </script>
+    <div id="paymentModal" class="modal opacity-0 pointer-events-none fixed inset-0 z-[100] flex items-center justify-center bg-gray-900/80 backdrop-blur-sm px-4 transition-all duration-300">
+        <div class="modal-content bg-white w-full max-w-4xl rounded-2xl shadow-2xl overflow-hidden transform scale-95 transition-all flex flex-col md:flex-row max-h-[90vh]">
+            <div class="w-full md:w-5/12 bg-gray-50 p-6 md:p-8 border-r border-gray-100 flex flex-col">
+                <h3 class="text-xl font-black text-gray-800 mb-6 uppercase tracking-wide">Thông tin đơn hàng</h3>
+                <div class="flex gap-4 mb-6">
+                    <img id="payCourseImg" src="" class="w-24 h-16 object-cover rounded-lg shadow-sm border border-gray-200">
+                    <div>
+                        <h4 id="payCourseTitle" class="font-bold text-gray-800 text-sm line-clamp-2 mb-1">...</h4>
+                        <span id="payCourseTag" class="text-[10px] font-bold bg-teal-100 text-teal-700 px-2 py-0.5 rounded">...</span>
+                    </div>
+                </div>
+                <div class="space-y-3 text-sm text-gray-600 flex-1">
+                    <div class="flex justify-between"><span>Giá gốc:</span><span id="payOriginalPrice" class="line-through text-gray-400">0đ</span></div>
+                    <div class="flex justify-between text-green-600 font-bold"><span>Giảm giá:</span><span id="payDiscount">-0đ</span></div>
+                    <div class="h-px bg-gray-200 my-2"></div>
+                    <div class="flex justify-between text-lg font-black text-gray-900"><span>THÀNH TIỀN:</span><span id="payFinalPrice" class="text-orange-600">0đ</span></div>
+                </div>
+                <div class="mt-6 text-xs text-gray-500 bg-white p-3 rounded border border-gray-200">
+                    <p><i class="fa-solid fa-user-shield text-teal-600 mr-1"></i> Tài khoản: <b id="payUserName" class="text-gray-800">...</b></p>
+                </div>
+            </div>
+            <div class="w-full md:w-7/12 p-6 md:p-8 relative">
+                <button onclick="closePaymentModal()" class="absolute top-4 right-4 text-gray-400 hover:text-red-500 transition-colors"><i class="fa-solid fa-times text-2xl"></i></button>
+                <div class="text-center">
+                    <h3 class="text-xl font-black text-brand mb-2">QUÉT MÃ ĐỂ THANH TOÁN</h3>
+                    <p class="text-sm text-gray-500 mb-6">Mở App ngân hàng và quét mã bên dưới</p>
+                    <div class="relative w-64 mx-auto mb-6 group">
+                        <div class="absolute inset-0 bg-gradient-to-tr from-teal-500 to-orange-500 rounded-xl blur opacity-20"></div>
+                        <div class="relative bg-white p-2 rounded-xl border-2 border-gray-100 shadow-lg">
+                            <img id="vietQrImage" src="" class="w-full h-full object-contain rounded-lg">
+                            <div id="qrLoading" class="absolute inset-0 bg-white flex flex-col items-center justify-center z-10"><i class="fa-solid fa-spinner fa-spin text-3xl text-brand mb-2"></i><span class="text-xs font-bold text-gray-400">Đang tạo mã QR...</span></div>
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2 gap-4 text-left bg-orange-50 p-4 rounded-xl border border-orange-100 mb-6">
+                        <div><span class="text-[10px] font-bold text-gray-500 uppercase block mb-1">Ngân hàng</span><div class="font-bold text-gray-800 text-sm" id="bankNameDisplay">...</div></div>
+                        <div><span class="text-[10px] font-bold text-gray-500 uppercase block mb-1">Chủ tài khoản</span><div class="font-bold text-gray-800 text-sm truncate" id="accountNameDisplay">...</div></div>
+                        <div class="col-span-2 border-t border-orange-200 pt-3 mt-1">
+                            <span class="text-[10px] font-bold text-gray-500 uppercase block mb-1">Số tài khoản</span>
+                            <div class="flex justify-between items-center"><div class="font-black text-brand text-lg tracking-wider" id="accountNoDisplay">...</div><button onclick="copyText('accountNoDisplay')" class="text-xs bg-white text-orange-600 font-bold px-2 py-1 rounded border">Copy</button></div>
+                        </div>
+                        <div class="col-span-2 border-t border-orange-200 pt-3">
+                            <span class="text-[10px] font-bold text-gray-500 uppercase block mb-1">Nội dung CK (Bắt buộc)</span>
+                            <div class="flex justify-between items-center"><div class="font-black text-brand text-sm" id="transferContentDisplay">...</div><button onclick="copyText('transferContentDisplay')" class="text-xs bg-white text-orange-600 font-bold px-2 py-1 rounded border">Copy</button></div>
+                        </div>
+                    </div>
+                    <button onclick="confirmPayment()" class="w-full py-3.5 bg-brand text-white font-bold rounded-xl shadow-lg hover:bg-teal-800 transition-all flex items-center justify-center gap-2"><i class="fa-solid fa-check-circle"></i> TÔI ĐÃ CHUYỂN KHOẢN XONG</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
         import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, GoogleAuthProvider, signInWithPopup, updateProfile } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
-        import { getFirestore, doc, getDoc, setDoc, collection, getDocs, query, where, orderBy } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
+        import { getFirestore, doc, getDoc, setDoc, addDoc, collection, getDocs, query, where, orderBy } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
         // --- LOGIC TỰ ĐỘNG ĐỔI GIAO DIỆN THEO MÙA & SỰ KIỆN ---
         // --- LOGIC TỰ ĐỘNG ĐỔI GIAO DIỆN & TRANG TRÍ LOGO (NÂNG CẤP) ---
         (function autoApplyTheme() {
@@ -643,8 +693,10 @@
                                 ${priceHtml}
                             </div>
                             <div class="mt-4">
-                                <button onclick="toggleRegisterModal(true)" class="w-full py-2 bg-orange-50 text-accent font-bold rounded-lg text-sm hover:bg-accent hover:text-white transition-all flex justify-center items-center gap-2">Xem chi tiết <i class="fa-solid fa-arrow-right"></i></button>
-                            </div>
+                            <button onclick="openPaymentModal('${c.id}')" class="w-full py-2 bg-orange-50 text-accent font-bold rounded-lg text-sm hover:bg-accent hover:text-white transition-all flex justify-center items-center gap-2">
+                                Đăng ký ngay <i class="fa-solid fa-cart-shopping"></i>
+                            </button>
+                        </div>
                         </div>
                     </div>`;
                 });
@@ -779,6 +831,93 @@
         // INIT
         loadHeroSettings();
         renderCoursesFromDB();
+        // --- LOGIC THANH TOÁN & VIETQR ---
+        let currentPayingCourse = null;
+        let dynamicBankConfig = null;
+
+        window.openPaymentModal = async (courseId) => {
+            if (!auth.currentUser) return window.toggleLoginModal(true);
+
+            // 1. Tải cấu hình ngân hàng từ Dashboard
+            if (!dynamicBankConfig) {
+                try {
+                    const s = await getDoc(doc(db, "site_settings", "payment_config"));
+                    dynamicBankConfig = s.exists() ? s.data() : { BANK_ID: "MB", ACCOUNT_NO: "0000", ACCOUNT_NAME: "ADMIN", TEMPLATE: "compact2" };
+                } catch (e) { console.error(e); }
+            }
+
+            // 2. Hiển thị Modal
+            document.getElementById('qrLoading').classList.remove('hidden');
+            const modal = document.getElementById('paymentModal');
+            modal.classList.remove('opacity-0', 'pointer-events-none');
+            modal.querySelector('.modal-content').classList.replace('scale-95', 'scale-100');
+
+            // 3. Lấy thông tin khóa học & tạo QR
+            try {
+                const snap = await getDoc(doc(db, "public_courses", courseId));
+                if(snap.exists()){
+                    const c = snap.data();
+                    currentPayingCourse = { id: snap.id, ...c };
+                    const user = auth.currentUser;
+                    const uSnap = await getDoc(doc(db, "users", user.uid));
+                    const uData = uSnap.data();
+                    const uPhone = uData.phone || user.uid.substring(0,6);
+
+                    // Điền thông tin
+                    document.getElementById('payCourseImg').src = c.image || c.thumbnail;
+                    document.getElementById('payCourseTitle').innerText = c.title;
+                    document.getElementById('payCourseTag').innerText = c.tag || "Khóa học";
+                    document.getElementById('payUserName').innerText = uData.displayName || "Học viên";
+
+                    const price = parseInt(c.price) || 0;
+                    const original = parseInt(c.originalPrice) || 0;
+                    document.getElementById('payOriginalPrice').innerText = original > 0 ? original.toLocaleString('vi-VN')+'đ' : '';
+                    document.getElementById('payDiscount').innerText = (original > price && price > 0) ? `-${(original-price).toLocaleString('vi-VN')}đ` : '0đ';
+                    document.getElementById('payFinalPrice').innerText = price > 0 ? price.toLocaleString('vi-VN')+'đ' : 'Miễn phí';
+
+                    // Tạo nội dung CK & Link QR
+                    const content = `TTOAN ${uPhone} ${c.id.substring(0,5).toUpperCase()}`.replace(/[^a-zA-Z0-9 ]/g, "");
+                    const qrUrl = `https://img.vietqr.io/image/${dynamicBankConfig.BANK_ID}-${dynamicBankConfig.ACCOUNT_NO}-${dynamicBankConfig.TEMPLATE}.png?amount=${price}&addInfo=${encodeURIComponent(content)}&accountName=${encodeURIComponent(dynamicBankConfig.ACCOUNT_NAME)}`;
+
+                    document.getElementById('bankNameDisplay').innerText = dynamicBankConfig.BANK_ID;
+                    document.getElementById('accountNameDisplay').innerText = dynamicBankConfig.ACCOUNT_NAME;
+                    document.getElementById('accountNoDisplay').innerText = dynamicBankConfig.ACCOUNT_NO;
+                    document.getElementById('transferContentDisplay').innerText = content;
+                    
+                    const qrImg = document.getElementById('vietQrImage');
+                    qrImg.onload = () => document.getElementById('qrLoading').classList.add('hidden');
+                    qrImg.src = qrUrl;
+                }
+            } catch(e){ console.error(e); }
+        };
+
+        window.closePaymentModal = () => {
+            const modal = document.getElementById('paymentModal');
+            modal.classList.add('opacity-0', 'pointer-events-none');
+            modal.querySelector('.modal-content').classList.replace('scale-100', 'scale-95');
+        };
+
+        window.copyText = (id) => { navigator.clipboard.writeText(document.getElementById(id).innerText); alert("Đã sao chép!"); };
+
+        window.confirmPayment = async () => {
+            if(!currentPayingCourse) return;
+            const btn = document.querySelector('button[onclick="confirmPayment()"]');
+            btn.innerHTML = '<i class="fa-solid fa-spinner fa-spin"></i> Đang gửi...'; btn.disabled = true;
+            try {
+                await addDoc(collection(db, "orders"), {
+                    userId: auth.currentUser.uid,
+                    courseId: currentPayingCourse.id,
+                    courseTitle: currentPayingCourse.title,
+                    amount: parseInt(currentPayingCourse.price),
+                    status: 'pending',
+                    content: document.getElementById('transferContentDisplay').innerText,
+                    createdAt: new Date().toISOString()
+                });
+                alert("Đã gửi yêu cầu! Vui lòng đợi duyệt.");
+                window.closePaymentModal();
+            } catch(e) { alert("Lỗi: " + e.message); } 
+            finally { btn.innerHTML = 'TÔI ĐÃ CHUYỂN KHOẢN XONG'; btn.disabled = false; }
+        };
     </script>
 </body>
 </html>
