--- a/student.html
+++ b/student.html
@@ -127,13 +127,27 @@
 
             <div id="tab-class-detail" class="tab-content hidden animate-fade-in flex flex-col h-full">
                 <div class="flex flex-col md:flex-row md:items-center justify-between gap-4 mb-8 bg-white p-4 rounded-2xl shadow-sm border border-teal-50">
-                    <div class="flex items-center gap-4">
-                        <button onclick="switchTab('classes')" class="w-12 h-12 rounded-full bg-gray-100 hover:bg-gray-200 flex items-center justify-center text-gray-600 transition-colors"><i class="fa-solid fa-arrow-left text-lg"></i></button>
-                        <div><h2 class="text-xl md:text-2xl font-black text-gray-800 leading-none mb-1" id="detailClassName">...</h2><p class="text-sm text-gray-500 font-medium">Danh sách bài tập</p></div>
-                    </div>
-                    <div><select onchange="renderClassExams(this.value)" class="bg-gray-50 border border-gray-200 text-gray-700 text-sm font-bold rounded-xl focus:ring-teal-500 focus:border-teal-500 block w-full md:w-auto p-3 outline-none cursor-pointer"><option value="newest">✨ Mới nhất trước</option><option value="oldest">📅 Cũ nhất trước</option></select></div>
-                </div>
-                <div id="classExamList" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 pb-20"></div>
+    <div class="flex items-center gap-4">
+        <button onclick="switchTab('classes')" class="w-12 h-12 rounded-full bg-gray-100 hover:bg-gray-200 flex items-center justify-center text-gray-600 transition-colors"><i class="fa-solid fa-arrow-left text-lg"></i></button>
+        <div>
+            <h2 class="text-xl md:text-2xl font-black text-gray-800 leading-none mb-1" id="detailClassName">...</h2>
+            <p class="text-sm text-gray-500 font-medium">Danh sách bài tập</p>
+        </div>
+    </div>
+    
+    <div class="flex items-center gap-3">
+        <div class="bg-gray-100 p-1 rounded-xl flex shrink-0">
+            <button onclick="changeLayout('grid')" id="btn-layout-grid" class="p-2.5 rounded-lg text-teal-600 bg-white shadow-sm transition-all"><i class="fa-solid fa-border-all"></i></button>
+            <button onclick="changeLayout('list')" id="btn-layout-list" class="p-2.5 rounded-lg text-gray-400 hover:text-teal-600 transition-all"><i class="fa-solid fa-list-ul"></i></button>
+        </div>
+        
+        <select onchange="renderClassExams(this.value)" class="bg-gray-50 border border-gray-200 text-gray-700 text-sm font-bold rounded-xl focus:ring-teal-500 focus:border-teal-500 block w-full md:w-auto p-3 outline-none cursor-pointer">
+            <option value="newest">✨ Mới nhất trước</option>
+            <option value="oldest">📅 Cũ nhất trước</option>
+        </select>
+    </div>
+</div>
+<div id="classExamList" class="pb-20"></div>
             </div>
 
             <div id="tab-my-courses" class="tab-content hidden animate-fade-in">
